Changed ArdasConfiguration to have virtual thread ExecutorService
 Changes to be committed:
	modified:   src/main/java/com/ardaslegends/configuration/ArdaConfiguration.java

Signed-off-by: Luktronic <luktronic@gmx.at>